--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -212,7 +212,11 @@ jobs:
             'if [ -f ".env" ]; then set -a; . ./.env; set +a; fi',
             'export NODE_ENV=staging',
             "export RELEASE_ID=`"$env:RELEASE`"",
-            'nohup node dist/main.js > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log &',
+            '# Detect Nest entrypoint (dist/main.js vs dist/src/main.js)',
+            'ENTRY="dist/main.js"',
+            'if [ -f "dist/src/main.js" ]; then ENTRY="dist/src/main.js"; fi',
+            'if [ ! -f "$ENTRY" ]; then echo "Entry file not found: $ENTRY" >&2; ls -la dist dist/src || true; exit 1; fi',
+            'nohup node "$ENTRY" > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log &',
             'echo $! > "$PIDFILE"',
             'echo "Started API with PID $(cat "$PIDFILE")"'
           ) -join "`n"
@@ -321,7 +325,7 @@ jobs:
           icacls "$sshDir\deploy_key" /inheritance:r /grant "$env:USERNAME`:F" | Out-Null
           
           # Execute rollback remotely (avoid piping CRLF)
-          $rollbackCmd = "bash -lc 'set -euo pipefail; PREV=$(ls -1dt /var/www/project-management/releases/*/ 2>/dev/null | sed -n \"2p\" | tr -d \"/\"); if [ -n \"$PREV\" ]; then echo \"Rolling back to: $PREV\"; ln -sfn \"$PREV\" /var/www/project-management/current; mkdir -p /var/www/project-management/shared/logs /var/www/project-management/shared/run; PIDFILE=/var/www/project-management/shared/run/api.pid; if [ -f \"$PIDFILE\" ] && kill -0 \"$(cat \"$PIDFILE\")\" 2>/dev/null; then kill \"$(cat \"$PIDFILE\")\" || true; sleep 1; fi; cd /var/www/project-management/current; if [ -f .env ]; then set -a; . ./.env; set +a; fi; export NODE_ENV=staging; CUR=$(readlink -f /var/www/project-management/current); export RELEASE_ID=$(basename \"$CUR\"); nohup node dist/main.js > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log & echo $! > \"$PIDFILE\"; echo \"Rollback started PID $(cat \"$PIDFILE\")\"; else echo \"No previous release found for rollback\"; exit 1; fi'"
+          $rollbackCmd = "bash -lc 'set -euo pipefail; PREV=$(ls -1dt /var/www/project-management/releases/*/ 2>/dev/null | sed -n \"2p\" | tr -d \"/\"); if [ -n \"$PREV\" ]; then echo \"Rolling back to: $PREV\"; ln -sfn \"$PREV\" /var/www/project-management/current; mkdir -p /var/www/project-management/shared/logs /var/www/project-management/shared/run; PIDFILE=/var/www/project-management/shared/run/api.pid; if [ -f \"$PIDFILE\" ] && kill -0 \"$(cat \"$PIDFILE\")\" 2>/dev/null; then kill \"$(cat \"$PIDFILE\")\" || true; sleep 1; fi; cd /var/www/project-management/current; if [ -f .env ]; then set -a; . ./.env; set +a; fi; export NODE_ENV=staging; CUR=$(readlink -f /var/www/project-management/current); export RELEASE_ID=$(basename \"$CUR\"); ENTRY=dist/main.js; [ -f dist/src/main.js ] && ENTRY=dist/src/main.js; [ -f \"$ENTRY\" ] || { echo \"Entry not found: $ENTRY\" >&2; ls -la dist dist/src || true; exit 1; }; nohup node \"$ENTRY\" > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log & echo $! > \"$PIDFILE\"; echo \"Rollback started PID $(cat \"$PIDFILE\")\"; else echo \"No previous release found for rollback\"; exit 1; fi'"
           & ssh -i "$sshDir\deploy_key" -p $env:STAGING_PORT -o StrictHostKeyChecking=no -o "UserKnownHostsFile=$knownHosts" -o "GlobalKnownHostsFile=$knownHosts" -o BatchMode=yes -o IdentitiesOnly=yes -o PreferredAuthentications=publickey -o ConnectTimeout=10 -o ServerAliveInterval=5 -o ServerAliveCountMax=3 $remote $rollbackCmd
 
   deploy_production:
@@ -481,7 +485,11 @@ jobs:
             'if [ -f ".env" ]; then set -a; . ./.env; set +a; fi',
             'export NODE_ENV=production',
             "export RELEASE_ID=`"$env:RELEASE`"",
-            'nohup node dist/main.js > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log &',
+            '# Detect Nest entrypoint (dist/main.js vs dist/src/main.js)',
+            'ENTRY="dist/main.js"',
+            'if [ -f "dist/src/main.js" ]; then ENTRY="dist/src/main.js"; fi',
+            'if [ ! -f "$ENTRY" ]; then echo "Entry file not found: $ENTRY" >&2; ls -la dist dist/src || true; exit 1; fi',
+            'nohup node "$ENTRY" > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log &',
             'echo $! > "$PIDFILE"',
             'echo "Started API with PID $(cat "$PIDFILE")"'
           ) -join "`n"
@@ -585,5 +593,5 @@ jobs:
           icacls "$sshDir\deploy_key" /inheritance:r /grant "$env:USERNAME`:F" | Out-Null
           
           # Execute rollback remotely (avoid piping CRLF)
-          $rollbackCmd = "bash -lc 'set -euo pipefail; PREV=$(ls -1dt /var/www/project-management/releases/*/ 2>/dev/null | sed -n \"2p\" | tr -d \"/\"); if [ -n \"$PREV\" ]; then echo \"Rolling back to: $PREV\"; ln -sfn \"$PREV\" /var/www/project-management/current; mkdir -p /var/www/project-management/shared/logs /var/www/project-management/shared/run; PIDFILE=/var/www/project-management/shared/run/api.pid; if [ -f \"$PIDFILE\" ] && kill -0 \"$(cat \"$PIDFILE\")\" 2>/dev/null; then kill \"$(cat \"$PIDFILE\")\" || true; sleep 1; fi; cd /var/www/project-management/current; if [ -f .env ]; then set -a; . ./.env; set +a; fi; export NODE_ENV=production; CUR=$(readlink -f /var/www/project-management/current); export RELEASE_ID=$(basename \"$CUR\"); nohup node dist/main.js > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log & echo $! > \"$PIDFILE\"; echo \"Rollback started PID $(cat \"$PIDFILE\")\"; else echo \"No previous release found for rollback\"; exit 1; fi'"
+          $rollbackCmd = "bash -lc 'set -euo pipefail; PREV=$(ls -1dt /var/www/project-management/releases/*/ 2>/dev/null | sed -n \"2p\" | tr -d \"/\"); if [ -n \"$PREV\" ]; then echo \"Rolling back to: $PREV\"; ln -sfn \"$PREV\" /var/www/project-management/current; mkdir -p /var/www/project-management/shared/logs /var/www/project-management/shared/run; PIDFILE=/var/www/project-management/shared/run/api.pid; if [ -f \"$PIDFILE\" ] && kill -0 \"$(cat \"$PIDFILE\")\" 2>/dev/null; then kill \"$(cat \"$PIDFILE\")\" || true; sleep 1; fi; cd /var/www/project-management/current; if [ -f .env ]; then set -a; . ./.env; set +a; fi; export NODE_ENV=production; CUR=$(readlink -f /var/www/project-management/current); export RELEASE_ID=$(basename \"$CUR\"); ENTRY=dist/main.js; [ -f dist/src/main.js ] && ENTRY=dist/src/main.js; [ -f \"$ENTRY\" ] || { echo \"Entry not found: $ENTRY\" >&2; ls -la dist dist/src || true; exit 1; }; nohup node \"$ENTRY\" > /var/www/project-management/shared/logs/out.log 2> /var/www/project-management/shared/logs/error.log & echo $! > \"$PIDFILE\"; echo \"Rollback started PID $(cat \"$PIDFILE\")\"; else echo \"No previous release found for rollback\"; exit 1; fi'"
           & ssh -i "$sshDir\deploy_key" -p $env:PROD_PORT -o StrictHostKeyChecking=no -o "UserKnownHostsFile=$knownHosts" -o "GlobalKnownHostsFile=$knownHosts" -o BatchMode=yes -o IdentitiesOnly=yes -o PreferredAuthentications=publickey -o ConnectTimeout=10 -o ServerAliveInterval=5 -o ServerAliveCountMax=3 $remote $rollbackCmd
