fix: run prisma generate before migrate to include runtime client

--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -192,6 +192,8 @@ jobs:
             'fi',
             'if [ -d "./node_modules/.bin" ]; then chmod -R a+rx "./node_modules/.bin" 2>/dev/null || true; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
+            '  # Generate Prisma Client (required at runtime)',
+            '  node ./node_modules/prisma/build/index.js generate',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
             'else',
             '  echo "Prisma package not found in node_modules (node_modules/prisma/build/index.js missing)" >&2',
@@ -465,6 +467,8 @@ jobs:
             'fi',
             'if [ -d "./node_modules/.bin" ]; then chmod -R a+rx "./node_modules/.bin" 2>/dev/null || true; fi',
             'if [ -f "./node_modules/prisma/build/index.js" ]; then',
+            '  # Generate Prisma Client (required at runtime)',
+            '  node ./node_modules/prisma/build/index.js generate',
             '  node ./node_modules/prisma/build/index.js migrate deploy',
             'else',
             '  echo "Prisma package not found in node_modules (node_modules/prisma/build/index.js missing)" >&2',
