--- a/.github/workflows/cd-staging-prod.yml
+++ b/.github/workflows/cd-staging-prod.yml
@@ -184,7 +184,7 @@ jobs:
             'if [ -d "./node_modules/@prisma/engines" ]; then',
             '  chmod -R a+rX "./node_modules/@prisma/engines" || true',
             '  chmod +x ./node_modules/@prisma/engines/* 2>/dev/null || true',
-            '  find "./node_modules/@prisma/engines" -type f -maxdepth 1 -exec chmod +x {} \; 2>/dev/null || true',
+            '  find "./node_modules/@prisma/engines" -maxdepth 1 -type f -exec chmod +x {} + 2>/dev/null || true',
             'fi',
             'if [ -d "./node_modules/.prisma/client" ]; then',
             '  chmod -R a+rX "./node_modules/.prisma/client" || true',
@@ -459,7 +459,7 @@ jobs:
             'if [ -d "./node_modules/@prisma/engines" ]; then',
             '  chmod -R a+rX "./node_modules/@prisma/engines" || true',
             '  chmod +x ./node_modules/@prisma/engines/* 2>/dev/null || true',
-            '  find "./node_modules/@prisma/engines" -maxdepth 1 -type f -exec chmod +x {} \\; 2>/dev/null || true',
+            '  find "./node_modules/@prisma/engines" -maxdepth 1 -type f -exec chmod +x {} + 2>/dev/null || true',
             'fi',
             'if [ -d "./node_modules/.prisma/client" ]; then',
             '  chmod -R a+rX "./node_modules/.prisma/client" || true',
